Change the hook to automatically trigger without the version in DockerFile

--- a/hooks/build
+++ b/hooks/build
@@ -7,9 +7,19 @@
 # - $IMAGE_NAME : The name of the Docker Image
 
 echo "Building Docker Image: ${IMAGE_NAME}"
+echo "Building Version: ${VERSION}"
+
+BUILD_HUGO_VERSION=""
+
+if [ "${VERSION}" == "latest" ]
+then
+  $BUILD_HUGO_VERSION="--build-arg HUGO_VERSION=`git tag | sort | tail -n 1`"
+fi
 
 docker build \
 --build-arg VCS_REF=`git rev-parse --short HEAD` \
 --build-arg VCS_URL=`git config --get remote.origin.url` \
 --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
+--build-arg HUGO_VERSION=`git tag | sort | tail -n 1` \
+$BUILD_HUGO_VERSION \
 -t $IMAGE_NAME .
